--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 PORT = 8080
-MONGO_URL = "mongodb+srv://sdamodhare5:FRpPxXFBzc2EaOZn@cluster0.88tkp80.mongodb.net/doeat?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URL = "mongodb+srv://sdamodhare5:FRpPxXFBzc2EaOZn@cluster0.88tkp80.mongodb.net/sandeep?retryWrites=true&w=majority&appName=Tanishq"
 # MONGO_URL = 'mongodb://127.0.0.1:27017/auth'
+
+MONGO_URI="mongodb+srv://sdamodhare5:mm9Z1VyYDYdKZtC6@cluster0.88tkp80.mongodb.net/?retryWrites=true&w=majority&appName=sandeep"
