--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,21 @@
   "version": "1.0.0",
   "description": "nodejs steps",
   "main": "index.js",
+  "engines": 
+  {"node": "20.x"},
+  
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+
+
+
+  
+
+
+
+
   "keywords": [],
   "author": "",
   "license": "ISC",
